tests/baselines/reference/genericInterfacesWithoutTypeArguments.errors.txt
==== tests/cases/compiler/genericInterfacesWithoutTypeArguments.ts (2 errors) ====
    interface I<T> { }
    class C<T> { }
    var i: I;
           ~
!!! genericInterfacesWithoutTypeArguments.ts(3,8): error TS2090: Generic type 'I<T>' requires 1 type argument(s).
    var c: C<I>;
             ~
!!! genericInterfacesWithoutTypeArguments.ts(4,10): error TS2090: Generic type 'I<T>' requires 1 type argument(s).
    